--- a/ComplainCenter/Views/Shared/_Layout.cshtml
+++ b/ComplainCenter/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="~/css/dataTables.bootstrap.min.css" rel="stylesheet" />
     <title>Easy Admin Panel an Admin Panel Category Flat Bootstrap Responsive Website Template | Blank Page :: w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -30,7 +31,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/wow.min.js"></script>
     <script>
-		 new WOW().init();
+        new WOW().init();
     </script>
     <!--//end-animate-->
     <!----webfonts--->
@@ -60,42 +61,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <!--sidebar nav start-->
                 <ul class="nav nav-pills nav-stacked custom-nav">
-                    <li><a href="index.html"><i class="lnr lnr-power-switch"></i><span>Dashboard</span></a></li>
+                    <li><a href="@Url.Action("Index","Complain")"><i class="lnr lnr-power-switch"></i><span>Complains</span></a></li>
                     <li class="menu-list">
                         <a href="#">
                             <i class="lnr lnr-cog"></i>
-                            <span>Components</span>
+                            <span>Users</span>
                         </a>
                         <ul class="sub-menu-list">
                             <li><a href="grids.html">Grids</a> </li>
                             <li><a href="widgets.html">Widgets</a></li>
                         </ul>
                     </li>
-                    <li><a href="forms.html"><i class="lnr lnr-spell-check"></i> <span>Forms</span></a></li>
-                    <li><a href="tables.html"><i class="lnr lnr-menu"></i> <span>Tables</span></a></li>
-                    <li class="menu-list">
-                        <a href="#"><i class="lnr lnr-envelope"></i> <span>MailBox</span></a>
-                        <ul class="sub-menu-list">
-                            <li><a href="inbox.html">Inbox</a> </li>
-                            <li><a href="compose-mail.html">Compose Mail</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-list">
-                        <a href="#"><i class="lnr lnr-indent-increase"></i> <span>Menu Levels</span></a>
-                        <ul class="sub-menu-list">
-                            <li><a href="charts.html">Basic Charts</a> </li>
-                        </ul>
-                    </li>
-                    <li><a href="codes.html"><i class="lnr lnr-pencil"></i> <span>Typography</span></a></li>
-                    <li><a href="media.html"><i class="lnr lnr-select"></i> <span>Media Css</span></a></li>
-                    <li class="menu-list act">
-                        <a href="#"><i class="lnr lnr-book"></i>  <span>Pages</span></a>
-                        <ul class="sub-menu-list">
-                            <li><a href="sign-in.html">Sign In</a> </li>
-                            <li><a href="sign-up.html">Sign Up</a></li>
-                            <li><a href="blank_page.html">Blank Page</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="forms.html"><i class="lnr lnr-spell-check"></i> <span>PC</span></a></li>
+                    <li><a href="tables.html"><i class="lnr lnr-menu"></i> <span>Locations</span></a></li>
+                    
+                    
+                   
                 </ul>
                 <!--sidebar nav end-->
             </div>
@@ -174,7 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <script src="js/classie.js"></script>
                                     <script src="js/uisearch.js"></script>
                                     <script>
-												new UISearch( document.getElementById( 'sb-search' ) );
+                                        new UISearch(document.getElementById('sb-search'));
                                     </script>
                                     <!-- //search-scripts -->
                                 </li>
@@ -293,7 +274,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <div class="profile_img">
                                             <span style="background:url(images/1.jpg) no-repeat center"> </span>
                                             <div class="user-name">
-                                                <p>@HttpContext.Current.Session["name"]<span>@HttpContext.Current.Session["ut"]</span></p>
+                                                <p>Michael<span>Administrator</span></p>
                                             </div>
                                             <i class="lnr lnr-chevron-down"></i>
                                             <i class="lnr lnr-chevron-up"></i>
